--- a/gradle.properties
+++ b/gradle.properties
@@ -11,8 +11,8 @@ major_version=1
 minor_version=0
 patch_version=0
 
-mcp_channel=stable
-mcp_mc_version=1.14.4
-mcp_version=58
-mc_version=1.14.4
-forge_version=28.2.23
+mcp_channel=snapshot
+mcp_mc_version=1.15.1
+mcp_version=20200721
+mc_version=1.15.2
+forge_version=31.2.31
