--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
+# Mod config
 mod_name=RapidLeafDecay
 mod_id=rapid_leaf_decay
 modder=GeheimagentNr1
@@ -11,6 +12,16 @@ major_version=2
 minor_version=0
 patch_version=2
 
+# Mod deployment config
+mod_display_name=Rapid Leaf Decay
+curseforge_project_id=396847
+modrinth_project_it=
+usableOnClientSide=true
+usableOnServerSide=true
+#For debugging: gradlew modrinth -PuploadDebug=true
+uploadDebug=false
+
+# Depencency config
 mcp_channel=official
 mc_version=1.19.4
 forge_version=45.0.24
