--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ patch_version=2
 # Mod deployment config
 mod_display_name=Rapid Leaf Decay
 curseforge_project_id=396847
-modrinth_project_id=
+modrinth_project_id=jSQXzmcf
 usableOnClientSide=true
 usableOnServerSide=true
 #For debugging: gradlew modrinth -PuploadDebug=true
